Changes by peter